--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,18 +3,16 @@ name: CD
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
   workflow_dispatch:
 
 jobs:
-  # lint_and_test:
-  #   uses: xjb/workflow_example/.github/workflows/ci.yml@workflow-chain
+  lint_and_test:
+    uses: xjb/workflow_example/.github/workflows/ci.yml@main
 
   build:
-    # needs:
-    #   - lint_and_test
+    needs:
+      - lint_and_test
 
     runs-on: ubuntu-latest
 
