--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,12 +7,12 @@ on:
   workflow_dispatch:
 
 jobs:
-  lint_and_test:
+  integration:
     uses: xjb/workflow_example/.github/workflows/ci.yml@main
 
   build:
     needs:
-      - lint_and_test
+      - integration
 
     runs-on: ubuntu-latest
 
