--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,6 @@
 name: CI
 
 on:
-  # push:
-  #   branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
@@ -10,16 +8,26 @@ on:
   workflow_call:
 
 jobs:
-  lint:
+  lint-js:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
+      - run: exit 0
 
+  lint-css:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - run: exit 1
+
+  lint-html:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
       - run: exit 0
 
   test:
     runs-on: ubuntu-latest
-
     steps:
+      - uses: actions/checkout@v3
       - run: exit 0
