--- a/.github/workflows/json.yml
+++ b/.github/workflows/json.yml
@@ -28,7 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo '{"name":"", "password":""}' > msvs.json
-      - run: echo "name:\npassword\n" > msvs.yaml
+      - run: echo -e "name:\npassword\n" > msvs.yaml
       - uses: microsoft/variable-substitution@v1 
         with:
           files: msvs.json, msvs.yaml
