--- a/.github/workflows/json.yml
+++ b/.github/workflows/json.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           name: "new-json-file.json"
           # json: '{"name":"jsdaniell", "password":"mypass"}'
+      - run: ls -l
       - run: cat new-json-file.json
 
   variable-substitution:
